--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,6 +8,15 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Canvas
+            x:Name="MyCanvas"
+            Background="Black"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Width="800"
+            Height="600"/>
+            
+        
 
     </Grid>
 </Page>
