--- a/Food.xaml
+++ b/Food.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Capman.Player"
+    x:Class="Capman.Food"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Capman"
@@ -9,15 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Rectangle Width="100" Height="100">
-        <Rectangle.Fill>
-            <ImageBrush
-                ImageSource="Assets/Ball.png"
-                Stretch="Fill"
-                AlignmentX="Left"
-                AlignmentY="Top">
-            </ImageBrush>
-                   
-        </Rectangle.Fill>
-    </Rectangle>
+    <Image Source="Assets/ball.png" 
+           Width="20"
+           Height="20"/>
 </UserControl>
