--- a/GameOver.xaml
+++ b/GameOver.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Capman.MainMenu"
+    x:Class="Capman.GameOver"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Capman"
@@ -9,9 +9,9 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="PlayButton" Content="Play" Width="200" Margin="5" Click="PlayButton_Click"/>
-            <Button x:Name="HighscoreButton" Content="Highscores" Width="200" Margin="5"/>
-            <Button x:Name="InstructionsButton" Content="Instructions" Width="200" Margin="5" Click="InstructionsButton_Click"/>
-        </StackPanel>
+            <TextBlock Text="Game Over!" FontSize="100" Margin="50"/>
+            <TextBlock x:Name="PoinBtlock"  FontSize="20" Margin="50"/>
+            <Button x:Name="ReturnToMenuButton" Content="Back to Main Menu" Margin="5" Click="ReturnToMenuButton_Click_1" HorizontalAlignment="Center"/>
+             </StackPanel>
     </Grid>
 </Page>
